--- a/slicing-android/app/src/main/res/values/colors.xml
+++ b/slicing-android/app/src/main/res/values/colors.xml
@@ -1,6 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <!-- Text -->
+    <color name="text">#303030</color>
+
+    <!-- System -->
+    <color name="red">#ff0000</color>
+    <color name="yellow">#ffff00</color>
+    <color name="green">#00ff00</color>
+    <color name="cyan">#00ffff</color>
+    <color name="blue">#0000ff</color>
+    <color name="magenta">#ff00ff</color>
+    <color name="white">#ffffff</color>
+    <color name="black">#000000</color>
+    <color name="transparent">#00000000</color>
+
     <!-- Android theme colors -->
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574b</color>
