Measure size of the level canvas based on the available space and canvas unit sizes

--- a/slicing-android/app/src/main/res/values/dimens.xml
+++ b/slicing-android/app/src/main/res/values/dimens.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <!-- Margins -->
+    <dimen name="pagePadding">8dp</dimen>
+
     <!-- Text -->
     <dimen name="text">17sp</dimen>
     <dimen name="titleText">20sp</dimen>
