--- a/slicing-android/app/src/main/res/values/colors.xml
+++ b/slicing-android/app/src/main/res/values/colors.xml
@@ -4,6 +4,10 @@
     <!-- Text -->
     <color name="text">#303030</color>
 
+    <!-- Game -->
+    <color name="slicePreviewLine">#ff0000</color>
+    <color name="stretchedSlicePreviewLine">#40ff0000</color>
+
     <!-- System -->
     <color name="red">#ff0000</color>
     <color name="yellow">#ffff00</color>
